[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"
[project]
name = "data_post_processing"

authors = [{name = 'Raja sekar', email = 'shanthakumar.rajasekar@gmail.com'}]
readme = 'README.md'

classifiers = [
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.6"
dynamic = ["version", "description"]
[project_urls]
Documentation = 'https://github.com/ShanthaKumarR/seasave_data_conversion/blob/main/README.md'
Source = 'https://github.com/ShanthaKumarR/seasave_data_conversion.git'